--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,7 +33,12 @@ android {
     }
 
     dataBinding {
-        enabled true
+        enabled = true
+        enabledForTests = true
+    }
+
+    testOptions.unitTests{
+        includeAndroidResources = true
     }
 
     compileOptions {
@@ -45,16 +50,6 @@ android {
         jvmTarget = JavaVersion.VERSION_1_8.toString()
     }
 }
-
-def lifeCycleExtensionVersion = '2.1.1'
-def materialVersion = '1.2.0-alpha04'
-def retrofitVersion = '2.7.1'
-def glideVersion = '4.10.0'
-def roomVersion = '2.2.3'
-def nav_version = '2.2.0'
-def preferencesVersion = '1.1.0'
-def coroutineVersion = "1.3.3"
-def version_retrofit_coroutines_adapter = "0.9.2"
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
@@ -107,4 +102,13 @@ dependencies {
 
     //Weather Image
     implementation 'com.github.pwittchen:weathericonview:1.1.0'
+
+    //Hamcrest
+    testImplementation "org.hamcrest:hamcrest-all:$hamcrestVersion"
+
+    // AndroidX Test - JVM testing
+    testImplementation "androidx.test.ext:junit-ktx:$androidXTestExtKotlinRunnerVersion"
+    testImplementation "androidx.test:core-ktx:$androidXTestCoreVersion"
+    testImplementation "org.robolectric:robolectric:$robolectricVersion"
+    testImplementation "androidx.arch.core:core-testing:$archTestingVersion"
 }
