--- a/build.gradle
+++ b/build.gradle
@@ -2,15 +2,15 @@
 
 buildscript {
     ext.kotlin_version = '1.3.61'
+    ext.nav_version = "2.2.0"
     repositories {
         google()
         jcenter()
-        
+
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.5.3'
+        classpath 'com.android.tools.build:gradle:3.6.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        def nav_version = "2.2.0"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -27,4 +27,26 @@ allprojects {
 
 task clean(type: Delete) {
     delete rootProject.buildDir
+}
+
+//Define versions in a single place
+ext {
+
+    //App dependencies
+    hamcrestVersion = '1.3'
+    junitVersion = '4.12'
+    robolectricVersion = '4.3.1'
+    androidXTestCoreVersion = '1.2.0'
+    androidXTestExtKotlinRunnerVersion = '1.1.1'
+    androidXTestRulesVersion = '1.2.0-beta01'
+    archTestingVersion = '2.0.0'
+    lifeCycleExtensionVersion = '2.1.1'
+    materialVersion = '1.2.0-alpha04'
+    retrofitVersion = '2.7.1'
+    glideVersion = '4.10.0'
+    roomVersion = '2.2.3'
+    nav_version = '2.2.0'
+    preferencesVersion = '1.1.0'
+    coroutineVersion = "1.3.3"
+    version_retrofit_coroutines_adapter = "0.9.2"
 }
