--- a/build.gradle
+++ b/build.gradle
@@ -49,4 +49,5 @@ ext {
     preferencesVersion = '1.1.0'
     coroutineVersion = "1.3.3"
     version_retrofit_coroutines_adapter = "0.9.2"
+    testCoroutineRuleVersion = '1.0.1'
 }
