Chore: add kotlinx coroutine test dependency

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,10 @@ android {
     kotlinOptions {
         jvmTarget = JavaVersion.VERSION_1_8.toString()
     }
+
+    androidExtensions {
+        experimental = true
+    }
 }
 
 dependencies {
@@ -112,6 +116,7 @@ dependencies {
     testImplementation "org.robolectric:robolectric:$robolectricVersion"
     testImplementation "androidx.arch.core:core-testing:$archTestingVersion"
 
-    //Test Coroutine Rule
+    //Test Coroutine Rule & Kotlinx-Coroutines-Test
     testImplementation "com.github.marcinOz:TestCoroutineRule:$testCoroutineRuleVersion"
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:$coroutineVersion"
 }
