--- a/build.gradle
+++ b/build.gradle
@@ -50,4 +50,5 @@ ext {
     coroutineVersion = "1.3.3"
     version_retrofit_coroutines_adapter = "0.9.2"
     testCoroutineRuleVersion = '1.0.1'
+    calendarVersion = 'v1.0.3'
 }
