--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.61'
+    ext.kotlin_version = '1.3.72'
     ext.nav_version = "2.2.0"
     repositories {
         google()
@@ -9,7 +9,7 @@ buildscript {
 
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.6.1'
+        classpath 'com.android.tools.build:gradle:3.6.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
         // NOTE: Do not place your application dependencies here; they belong
@@ -39,14 +39,14 @@ ext {
     androidXTestCoreVersion = '1.2.0'
     androidXTestExtKotlinRunnerVersion = '1.1.1'
     androidXTestRulesVersion = '1.2.0-beta01'
-    archTestingVersion = '2.0.0'
+    archTestingVersion = '2.1.0'
     lifeCycleExtensionVersion = '2.1.1'
-    materialVersion = '1.2.0-alpha04'
-    retrofitVersion = '2.7.1'
-    glideVersion = '4.10.0'
-    roomVersion = '2.2.3'
-    nav_version = '2.2.0'
-    preferencesVersion = '1.1.0'
+    materialVersion = '1.2.0-alpha06'
+    retrofitVersion = '2.8.1'
+    glideVersion = '4.11.0'
+    roomVersion = '2.2.5'
+    nav_version = '2.2.2'
+    preferencesVersion = '1.1.1'
     coroutineVersion = "1.3.3"
     version_retrofit_coroutines_adapter = "0.9.2"
     testCoroutineRuleVersion = '1.0.1'
@@ -54,4 +54,5 @@ ext {
     googlePlayLocation = '17.0.0'
     timberVersion = '4.7.1'
     vega_version = '1.0.6'
+    lifecycle_version = '2.2.0'
 }
