--- a/build.gradle
+++ b/build.gradle
@@ -2,13 +2,13 @@
 
 buildscript {
     ext.kotlin_version = '1.3.72'
-    ext.nav_version = "2.2.0"
     repositories {
         google()
         jcenter()
 
     }
     dependencies {
+        def nav_version = "2.3.0-alpha06"
         classpath 'com.android.tools.build:gradle:3.6.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
@@ -55,4 +55,7 @@ ext {
     timberVersion = '4.7.1'
     vega_version = '1.0.6'
     lifecycle_version = '2.2.0'
+    algolia_version = '2.3.1'
+    paging_version = '2.1.2'
+    elastic_version = '2.0.7'
 }
