--- a/app/build.gradle
+++ b/app/build.gradle
@@ -149,4 +149,7 @@ dependencies {
 
     //Elastic view
     implementation "com.github.skydoves:elasticviews:$elastic_version"
+
+    //Air Location
+    implementation "com.github.mumayank:AirLocation:$air_location_version"
 }
