--- a/build.gradle
+++ b/build.gradle
@@ -57,4 +57,5 @@ ext {
     algolia_version = '2.3.1'
     paging_version = '2.1.2'
     elastic_version = '2.0.7'
+    air_location_version = '1.3.1'
 }
