--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,8 +19,8 @@ android {
         applicationId "com.mayokunadeniyi.instantweather"
         minSdkVersion 21
         targetSdkVersion 29
-        versionCode 2
-        versionName "1.1-alpha-test"
+        versionCode 3
+        versionName "1.2"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         buildConfigField("String", "API_KEY", apikeyProperties['API_KEY'])
         buildConfigField("String","ALGOLIA_API_KEY",apikeyProperties['ALGOLIA_API_KEY'])
