Ci: uses actions/checkout@v2

--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -1,6 +1,6 @@
 name: Android Build
 
-on: pull_request
+on: [push, pull_request]
 
 jobs:
   build:
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v1
+      - uses: actions/checkout@v2
 
       - name: Set Up JDK
         uses: actions/setup-java@v1
