--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -14,7 +14,7 @@ jobs:
         uses: finnp/create-file-action@master
         env:
           FILE_NAME: "apikey.properties"
-          FILE_DATA: "API_KEY=""\nALGOLIA_API_KEY=""\nALGOLIA_APP_ID="""
+          FILE_DATA: "API_KEY = "KEY"\nALGOLIA_API_KEY = "KEY"\nALGOLIA_APP_ID = "KEY""
 
       - name: Set Up JDK
         uses: actions/setup-java@v1
