--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -11,10 +11,12 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Create apikey.properties
-        uses: finnp/create-file-action@master
-        env:
-          FILE_NAME: "apikey.properties"
-          FILE_DATA: "API_KEY=${{ secrets.API_KEY }}\nALGOLIA_API_KEY=${{ secrets.ALGOLIA_API_KEY }}\nALGOLIA_APP_ID=${{ secrets.ALGOLIA_APP_ID }}"
+        run: |
+          cat <<EOF> apikey.properties
+          API_KEY = "API_KEY"
+          ALGOLIA_API_KEY = "ALGOLIA_API_KEY"
+          ALGOLIA_APP_ID = "ALGOLIA_APP_ID"
+          EOF
 
       - name: Set Up JDK
         uses: actions/setup-java@v1
