--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -41,15 +41,16 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Create APIKEY.PROPERTIES File
+      - shell: bash
         env:
           API_KEY: ${{ secrets.APIKEY }}
           ALGOLIA_API_KEY: ${{ secrets.ALGOLIAAPIKEY }}
           ALGOLIA_APP_ID: ${{ secrets.ALGOLIAAPPID }}
-        run: touch apikey.properties
-
-      - run: echo "API_KEY = $API_KEY" >> apikey.properties
-      - run: echo "ALGOLIA_API_KEY = $ALGOLIA_API_KEY" >> apikey.properties
-      - run: echo "ALGOLIA_APP_ID = $ALGOLIA_APP_ID" >> apikey.properties
+        run: |
+          touch apikey.properties
+          echo "API_KEY = $API_KEY" >> apikey.properties
+          echo "ALGOLIA_API_KEY = $ALGOLIA_API_KEY" >> apikey.properties
+          echo "ALGOLIA_APP_ID = $ALGOLIA_APP_ID" >> apikey.properties
 
       - name: set up JDK 1.8
         uses: actions/setup-java@v1
