--- a/build.gradle
+++ b/build.gradle
@@ -9,12 +9,16 @@ buildscript {
     }
     dependencies {
         def nav_version = "2.3.0-alpha06"
-        classpath 'com.android.tools.build:gradle:4.0.0'
+        classpath 'com.android.tools.build:gradle:4.0.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
+}
+
+plugins {
+    id "org.jlleitschuh.gradle.ktlint" version "9.3.0"
 }
 
 allprojects {
@@ -23,6 +27,7 @@ allprojects {
         jcenter()
         maven { url 'https://jitpack.io' }
     }
+    apply plugin: "org.jlleitschuh.gradle.ktlint"
 }
 
 task clean(type: Delete) {
