--- a/.github/workflows/ci_ktlint.yml
+++ b/.github/workflows/ci_ktlint.yml
@@ -1,4 +1,4 @@
-name: ktlint
+name: Ktlint
 
 on:
   push:
@@ -13,8 +13,19 @@ jobs:
     strategy:
       fail-fast: false
     steps:
-      - name: checkout
+      - name: Checkout
         uses: actions/checkout@v2
+
+      - name: Create APIKEY.PROPERTIES File
+        env:
+          API_KEY: ${{ secrets.APIKEY }}
+          ALGOLIA_API_KEY: ${{ secrets.ALGOLIAAPIKEY }}
+          ALGOLIA_APP_ID: ${{ secrets.ALGOLIAAPPID }}
+        run: |
+          touch apikey.properties
+          echo "API_KEY = $API_KEY" >> apikey.properties
+          echo "ALGOLIA_API_KEY = $ALGOLIA_API_KEY" >> apikey.properties
+          echo "ALGOLIA_APP_ID = $ALGOLIA_APP_ID" >> apikey.properties
 
       - name: Set up JDK 1.8
         uses: actions/setup-java@v1
