--- a/build.gradle
+++ b/build.gradle
@@ -46,10 +46,10 @@ ext {
     androidXTestRulesVersion = '1.2.0-beta01'
     archTestingVersion = '2.1.0'
     lifeCycleExtensionVersion = '2.1.1'
-    materialVersion = '1.2.0-alpha06'
-    retrofitVersion = '2.8.1'
+    materialVersion = '1.3.0-alpha02'
+    retrofitVersion = '2.9.0'
     roomVersion = '2.2.5'
-    nav_version = '2.2.2'
+    nav_version = '2.3.0'
     preferencesVersion = '1.1.1'
     coroutineVersion = "1.3.3"
     version_retrofit_coroutines_adapter = "0.9.2"
@@ -61,5 +61,6 @@ ext {
     algolia_version = '2.3.1'
     paging_version = '2.1.2'
     elastic_version = '2.0.7'
-    work_version = '2.3.4'
+    work_version = '2.4.0'
+    mockitoVersion = "2.27.0"
 }
