--- a/build.gradle
+++ b/build.gradle
@@ -65,4 +65,7 @@ ext {
     mockitoVersion = "2.27.0"
     espressoVersion = "3.2.0"
     fragment_version = "1.3.0-alpha06"
+    dagger_version = "2.31"
+    okhttp_version = "4.9.0"
+    chuck_version = "1.1.0"
 }
