chore: setup firebase crashlytics, analytics

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,12 +1,9 @@
 apply plugin: 'com.android.application'
-
 apply plugin: 'kotlin-android'
-
 apply plugin: 'kotlin-android-extensions'
-
 apply plugin: 'kotlin-kapt'
-
 apply plugin: "androidx.navigation.safeargs.kotlin"
+apply plugin: 'com.google.firebase.crashlytics'
 
 def apikeyPropertiesFile = rootProject.file("apikey.properties")
 def apikeyProperties = new Properties()
@@ -168,6 +165,11 @@ dependencies {
     //Chuck
     debugImplementation Network.chuck
     releaseImplementation Network.chuckNoOp
+
+    //Firebase BoM, Crashlytics, Analytics
+    implementation platform(Firebase.firebaseBom)
+    implementation Firebase.crashlytics
+    implementation Firebase.analytics
 
     // AndroidX Test - JVM testing
     testImplementation AndroidX.testExt
