ci: update actions workflow

--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -9,16 +9,16 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - name: Create APIKEY.PROPERTIES File
+      - name: Create LOCAL.PROPERTIES File
         env:
           API_KEY: ${{ secrets.APIKEY }}
           ALGOLIA_API_KEY: ${{ secrets.ALGOLIAAPIKEY }}
           ALGOLIA_APP_ID: ${{ secrets.ALGOLIAAPPID }}
         run: |
-          touch apikey.properties
-          echo "API_KEY=$API_KEY" >> apikey.properties
-          echo "ALGOLIA_API_KEY=$ALGOLIA_API_KEY" >> apikey.properties
-          echo "ALGOLIA_APP_ID=$ALGOLIA_APP_ID" >> apikey.properties
+          touch local.properties
+          echo "API_KEY=$API_KEY" >> local.properties
+          echo "ALGOLIA_API_KEY=$ALGOLIA_API_KEY" >> local.properties
+          echo "ALGOLIA_APP_ID=$ALGOLIA_APP_ID" >> local.properties
 
       - name: Set up JDK 1.8
         uses: actions/setup-java@v1
@@ -39,16 +39,16 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - name: Create APIKEY.PROPERTIES File
+      - name: Create LOCAL.PROPERTIES File
         env:
           API_KEY: ${{ secrets.APIKEY }}
           ALGOLIA_API_KEY: ${{ secrets.ALGOLIAAPIKEY }}
           ALGOLIA_APP_ID: ${{ secrets.ALGOLIAAPPID }}
         run: |
-          touch apikey.properties
-          echo "API_KEY=$API_KEY" >> apikey.properties
-          echo "ALGOLIA_API_KEY=$ALGOLIA_API_KEY" >> apikey.properties
-          echo "ALGOLIA_APP_ID=$ALGOLIA_APP_ID" >> apikey.properties
+          touch local.properties
+          echo "API_KEY=$API_KEY" >> local.properties
+          echo "ALGOLIA_API_KEY=$ALGOLIA_API_KEY" >> local.properties
+          echo "ALGOLIA_APP_ID=$ALGOLIA_APP_ID" >> local.properties
 
       - name: Set up JDK 1.8
         uses: actions/setup-java@v1
