refactor: ktlint format

--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -9,13 +9,13 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - name: Create LOCAL.PROPERTIES File
+      - name: Create Properties File
         env:
           API_KEY: ${{ secrets.APIKEY }}
           ALGOLIA_API_KEY: ${{ secrets.ALGOLIAAPIKEY }}
           ALGOLIA_APP_ID: ${{ secrets.ALGOLIAAPPID }}
         run: |
-          touch local.properties keystore.properties
+          touch local.properties keystore.properties Instant-Weather-key
           echo "API_KEY=$API_KEY" >> local.properties
           echo "ALGOLIA_API_KEY=$ALGOLIA_API_KEY" >> local.properties
           echo "ALGOLIA_APP_ID=$ALGOLIA_APP_ID" >> local.properties
@@ -43,13 +43,13 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - name: Create LOCAL.PROPERTIES File
+      - name: Create Properties File
         env:
           API_KEY: ${{ secrets.APIKEY }}
           ALGOLIA_API_KEY: ${{ secrets.ALGOLIAAPIKEY }}
           ALGOLIA_APP_ID: ${{ secrets.ALGOLIAAPPID }}
         run: |
-          touch local.properties keystore.properties
+          touch local.properties keystore.properties Instant-Weather-key
           echo "API_KEY=$API_KEY" >> local.properties
           echo "ALGOLIA_API_KEY=$ALGOLIA_API_KEY" >> local.properties
           echo "ALGOLIA_APP_ID=$ALGOLIA_APP_ID" >> local.properties
