--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -15,14 +15,10 @@ jobs:
           ALGOLIA_API_KEY: ${{ secrets.ALGOLIAAPIKEY }}
           ALGOLIA_APP_ID: ${{ secrets.ALGOLIAAPPID }}
         run: |
-          touch local.properties keystore.properties Instant-Weather-key
+          touch local.properties
           echo "API_KEY=$API_KEY" >> local.properties
           echo "ALGOLIA_API_KEY=$ALGOLIA_API_KEY" >> local.properties
           echo "ALGOLIA_APP_ID=$ALGOLIA_APP_ID" >> local.properties
-          echo "storePassword=storePassword" >> keystore.properties
-          echo "keyPassword=keyPassword" >> keystore.properties
-          echo "keyAlias=keyAlias" >> keystore.properties
-          echo "storeFile=storeFile" >> keystore.properties
 
       - name: Set up JDK 1.8
         uses: actions/setup-java@v1
@@ -49,14 +45,10 @@ jobs:
           ALGOLIA_API_KEY: ${{ secrets.ALGOLIAAPIKEY }}
           ALGOLIA_APP_ID: ${{ secrets.ALGOLIAAPPID }}
         run: |
-          touch local.properties keystore.properties Instant-Weather-key
+          touch local.properties
           echo "API_KEY=$API_KEY" >> local.properties
           echo "ALGOLIA_API_KEY=$ALGOLIA_API_KEY" >> local.properties
           echo "ALGOLIA_APP_ID=$ALGOLIA_APP_ID" >> local.properties
-          echo "storePassword=storePassword" >> keystore.properties
-          echo "keyPassword=keyPassword" >> keystore.properties
-          echo "keyAlias=keyAlias" >> keystore.properties
-          echo "storeFile=storeFile" >> keystore.properties
 
       - name: Set up JDK 1.8
         uses: actions/setup-java@v1
