Update README.md (#37)
* chore: manage dependencies with buildSrc

* chore: setup firebase crashlytics, analytics

* chore: convert build scripts to kotlin dsl

* chore: convert build scripts to kotlin dsl

* chore: remove kotlin android extensions, enable viewbinding

* feat: use bottom sheet in search fragmenrt, format forecast dates

* chore: fix build config issues

* refactor: update .gitignore

* refactor: update .gitignore

* ci: update actions workflow

* refactor: fix failing tests

* chore: fix build config issues

* ci: update actions workflow

* refactor: ktlint format

* chore: fix build config issues

* chore: fix build config issues

* chore: fix build config issues

* refactor: update .gitignore

* refactor: ktlint format

* refactor: move algolia index name to build config

* refactor: move algolia index name to build config

* Update README.md

* ci: update actions workflow

* ci: update actions workflow

* ci: update actions workflow

--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -14,11 +14,13 @@ jobs:
           API_KEY: ${{ secrets.APIKEY }}
           ALGOLIA_API_KEY: ${{ secrets.ALGOLIAAPIKEY }}
           ALGOLIA_APP_ID: ${{ secrets.ALGOLIAAPPID }}
+          ALGOLIA_INDEX_NAME: ${{ secrets.ALGOLIA_INDEX_NAME }}
         run: |
           touch local.properties
           echo "API_KEY=$API_KEY" >> local.properties
           echo "ALGOLIA_API_KEY=$ALGOLIA_API_KEY" >> local.properties
           echo "ALGOLIA_APP_ID=$ALGOLIA_APP_ID" >> local.properties
+          echo "ALGOLIA_INDEX_NAME=$ALGOLIA_INDEX_NAME" >> local.properties
 
       - name: Set up JDK 1.8
         uses: actions/setup-java@v1
@@ -44,11 +46,13 @@ jobs:
           API_KEY: ${{ secrets.APIKEY }}
           ALGOLIA_API_KEY: ${{ secrets.ALGOLIAAPIKEY }}
           ALGOLIA_APP_ID: ${{ secrets.ALGOLIAAPPID }}
+          ALGOLIA_INDEX_NAME: ${{ secrets.ALGOLIA_INDEX_NAME }}
         run: |
           touch local.properties
           echo "API_KEY=$API_KEY" >> local.properties
           echo "ALGOLIA_API_KEY=$ALGOLIA_API_KEY" >> local.properties
           echo "ALGOLIA_APP_ID=$ALGOLIA_APP_ID" >> local.properties
+          echo "ALGOLIA_INDEX_NAME=$ALGOLIA_INDEX_NAME" >> local.properties
 
       - name: Set up JDK 1.8
         uses: actions/setup-java@v1
