--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -25,7 +25,9 @@ jobs:
       - name: Set up JDK 11
         uses: actions/setup-java@v2
         with:
+          distribution: temurin
           java-version: 11
+          cache: gradle
 
       - name: Run Tests
         run: ./gradlew test
@@ -57,7 +59,9 @@ jobs:
       - name: Set up JDK 11
         uses: actions/setup-java@v2
         with:
+          distribution: temurin
           java-version: 11
+          cache: gradle
       - name: Build debug APK
         run: bash ./gradlew assembleDebug --stacktrace
       - name: Upload APK
