--- a/.github/workflows/ci_ktlint.yml
+++ b/.github/workflows/ci_ktlint.yml
@@ -30,7 +30,9 @@ jobs:
       - name: Set up JDK 11
         uses: actions/setup-java@v2
         with:
+          distribution: temurin
           java-version: 11
+          cache: gradle
 
       - name: ktlint
         run: ./gradlew ktlintCheck
