--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -22,10 +22,12 @@ jobs:
           echo "ALGOLIA_APP_ID=$ALGOLIA_APP_ID" >> local.properties
           echo "ALGOLIA_INDEX_NAME=$ALGOLIA_INDEX_NAME" >> local.properties
 
-      - name: Set up JDK 1.8
-        uses: actions/setup-java@v1
+      - name: Set up JDK 11
+        uses: actions/setup-java@v2
         with:
-          java-version: 1.8
+          distribution: temurin
+          java-version: 11
+          cache: gradle
 
       - name: Run Tests
         run: ./gradlew test
@@ -54,10 +56,12 @@ jobs:
           echo "ALGOLIA_APP_ID=$ALGOLIA_APP_ID" >> local.properties
           echo "ALGOLIA_INDEX_NAME=$ALGOLIA_INDEX_NAME" >> local.properties
 
-      - name: Set up JDK 1.8
-        uses: actions/setup-java@v1
+      - name: Set up JDK 11
+        uses: actions/setup-java@v2
         with:
-          java-version: 1.8
+          distribution: temurin
+          java-version: 11
+          cache: gradle
       - name: Build debug APK
         run: bash ./gradlew assembleDebug --stacktrace
       - name: Upload APK
