--- a/.github/workflows/ci_ktlint.yml
+++ b/.github/workflows/ci_ktlint.yml
@@ -27,10 +27,12 @@ jobs:
           echo "ALGOLIA_API_KEY=$ALGOLIA_API_KEY" >> apikey.properties
           echo "ALGOLIA_APP_ID=$ALGOLIA_APP_ID" >> apikey.properties
 
-      - name: Set up JDK 1.8
-        uses: actions/setup-java@v1
+      - name: Set up JDK 11
+        uses: actions/setup-java@v2
         with:
-          java-version: 1.8
+          distribution: temurin
+          java-version: 11
+          cache: gradle
 
       - name: ktlint
         run: ./gradlew ktlintCheck
