chore - update dependency for m1 chip
demand
1. m1 chip require room version higher than 2.4.0-alpha03

modify

1. buildSrc/build.gradle.kts
  - import org.gradle.kotlin.dsl.`kotlin-dsl`
2. buildSrc/src/main/kotlin/Dependencies.kt
  - upgrade targetsdk, compile sdk due to room require them greater or equal 31
  - upgrade kotlin, fragment, coreEtxTest, room version due to sdk version change
3.  app/src/main/AndroidManifest.xml
  - add `export=true|false` for activity, it is necessary for sdk greater than 30

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,8 @@
         android:theme="@style/AppTheme"
         tools:targetApi="m">
         <activity android:name="com.mayokunadeniyi.instantweather.ui.MainActivity"
-            android:theme="@style/SplashScreenTheme">
+            android:theme="@style/SplashScreenTheme"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
