add m1 support to gradle.properties

--- a/gradle.properties
+++ b/gradle.properties
@@ -21,3 +21,6 @@ android.enableJetifier=true
 kotlin.code.style=official
 #Enable incremental annotation processing
 kapt.incremental.apt=true
+# m1 chip support
+org.gradle.jvmargs=-Xmx1536M -XX:MaxMetaspaceSize=512m -XX:+UseG1GC -Dfile.encoding=UTF-8 -Dapple.awt.UIElement=true
+
